<resources>
    <string name="app_name">ChatPPP</string>
</resources>